--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,55 @@
-version: 2.1
-orbs:
-  heroku: circleci/heroku@1.2.6
-  ruby: circleci/ruby@0.1.2
-
-workflows:
-heroku_deploy:
-  jobs:
-    - build
-    - heroku/deploy-via-git:
-        requires:
-          - build
-        filters:
-          branches:
-            only: main
-        post-steps:
-          - run: rails db:migrate
-
+version: 2
 jobs:
   build:
     docker:
       - image: circleci/ruby:2.5.3-stretch-node
+    environment:
+        POSTGRES_USER: postgres
+        POSTGRES_DB: sweater_weather_test
+        POSTGRES_PASSWORD: ""
     executor: ruby/default
     steps:
       - checkout
-      - run: gem install bundler
       - run:
           name: Which bundler?
           command: bundle -v
       - ruby/bundle-install
+      - run: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
+      - run: mkdir ~/rspec
+      - run:
+          command: bundle exec rspec --format progress --format RspecJunitFormatter -o ~/rspec/rspec.xml
+          when: always
+      - store_test_results:
+          path: ~/rspec
+          default: &default
+
+# version: 2.1
+# orbs:
+#   heroku: circleci/heroku@1.2.6
+#   ruby: circleci/ruby@0.1.2
+#
+# workflows:
+# heroku_deploy:
+#   jobs:
+#     - build
+#     - heroku/deploy-via-git:
+#         requires:
+#           - build
+#         filters:
+#           branches:
+#             only: main
+#         post-steps:
+#           - run: rails db:migrate
+#
+# jobs:
+#   build:
+#     docker:
+#       - image: circleci/ruby:2.5.3
+#     executor: ruby/default
+#     steps:
+#       - checkout
+#       - run: gem install bundler
+#       - run:
+#           name: Which bundler?
+#           command: bundle -v
+#       - ruby/bundle-install
