Update config file for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
     executor: ruby/default
     steps:
       - checkout
+      - run: gem install bundler
       - run:
           name: Which bundler?
           command: bundle -v
